add css for float images

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
+    css: "style.css"
     cover-image: "images/eds-logo.jpg"
   pdf:
     documentclass: scrreprt
