quartofy APIs chapter

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
     - part: 200-data-introduction.qmd
     - 201-data-tabular.qmd
     - 202-data-webscraping.qmd
-    #- 203-data-apis.qmd
+    - 203-data-apis.qmd
     - 204-data-sql.qmd
     - 210-data-checklist.qmd
     - references.qmd
