--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,8 +17,13 @@ book:
     - 201-data-tabular.qmd
     - 202-data-webscraping.qmd
     - 203-data-apis.qmd
-    - 204-data-sql.qmd
+    #- 204-data-sql.qmd
     - 210-data-checklist.qmd
+    - part: 300-edav-intro.qmd
+    - 301-edav-wrangling.qmd
+    #- 302-edav-analysis.qmd
+    #- 303-edav-visualisation.qmd
+    - 310-edav-checklist.qmd
     - references.qmd
 
 bibliography: references.bib
