quartofy 303 and improve display of "Parts" in toc

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,7 +22,7 @@ book:
     - part: 300-edav-intro.qmd
     - 301-edav-wrangling.qmd
     - 302-edav-analysis.qmd
-    #- 303-edav-visualisation.qmd
+    - 303-edav-visualisation.qmd
     - 310-edav-checklist.qmd
     - references.qmd
 
